# aaronholmes.net

./: .gitmodules  pyproject.toml
.github/workflows/: sphinx.yaml
.github/workflows/scripts/: update-mtimes.sh
source/: ads.txt  conf.py  index.rst
source/2019/: displaying_response_headers_and_pretty_json_with_curl.rst
source/2025/: _resource_name_mapper.rst  index.rst  interview_coding_take_homes_part_2a.rst  interview_coding_take_homes_part_2b.rst  interview_coding_take_homes_part_3.rst
source/2026/: browser_based_vcard_qr_code_generator.rst  index.rst
source/_static/: custom.css
source/_static/files/2025/interview_coding_take_homes_part_2b/: README.md  main.tf  outputs.tf  versions.tf
source/_static/files/2025/interview_coding_take_homes_part_2b/batch/: main.tf  outputs.tf  variables.tf
source/_static/files/2025/interview_coding_take_homes_part_2b/naming/: locals.tf  outputs.tf  variables.tf
source/_static/files/2025/interview_coding_take_homes_part_2b/tests/: batch.tftest.hcl  naming.tftest.hcl
source/_static/files/2025/interview_coding_take_homes_part_3/Analysis/: sample_input.json
source/_static/files/2025/interview_coding_take_homes_part_3/Test/: AnalysisApi.cs  AnalysisReport.cs
source/_static/files/2025/interview_coding_take_homes_part_3/report/: notebook_block_03.py  notebook_block_04.py  notebook_block_05.py  notebook_block_06.py
source/_static/files/2026/browser_based_vcard_qr_code_generator/: contact-qr-studio.html  qr-studio.html
