[project]
name = "aaronholmes-net"
version = "0.0.1"
description = "Aaron Holmes' website"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "esbonio ~= 1.1.0",
    "sphinx ~= 9.1.0",
    "sphinx-autobuild ~= 2025.8.25",
    "sphinx-copybutton ~= 0.5.2",
    "sphinx-reredirects ~= 1.1.0",
    "sphinx-sitemap ~= 2.9.0",
    "sphinx-toolbox ~= 4.1.1",
    "sphinxcontrib-plantuml ~= 0.30",
    "feedgen ~= 1.0.0",
    "lxml~=6.1.0",
    "python-dateutil ~= 2.9.0.post0"
]
